p2/app_folder/app2/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  selector:
    matchLabels:
      app: app-two
  replicas: 3
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: app-two 
          image: nginx:1.23.1
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: app-two-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-two-volume
          configMap:
            name: app-two-configmap
