p2/app_folder/app2/app2_service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  selector:
    app: app-two
