p2/app_folder/app2/app2_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-two-ingress
spec:
  rules:
  - host: app2.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-two
              port:
                number: 80
